--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="render">
   
     </div>
-    <!-- <div class="quiz-box custom-box hide">
+    <div class="quiz-box custom-box hide">
         <div class="question-number">
-            Question 1 of 5
+           
         </div>
         <div class="question-text">
             
@@ -32,8 +32,8 @@
         </div> 
 
        <div class="next-question-btn">
-            <button type="button" class="btn">Next</button>
-       </div> -->
+            <button type="button" class="next-btn">Next</button>
+       </div>
 
 
 
