was able to get next button functional, it now renders  each question into my questions-text div one at a time

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="box-1 custom-box">
-        <h3>instructions</h3>
-        <p>Answer all:<span class="totalQuestions"> 5 </span></p>
+        <h3>Instructions</h3>
+        <p>Answer all:<span class="totalQuestions"> 10 questions </span></p>
         <button type="button" class="start-btn">Start</button>
     </div>
 
