--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             
         </div>
         <div class="option-container">
-            <div class="option">True</div>
-            <div class="option">False</div>
+            <div id="true" class="option" value="True">True</div>
+            <div Id="false" class="option"value="False">False</div>
         </div> 
 
        <div class="next-question-btn">
